Spring Boot 3.2 + Java 21
+ lots of javax -> jakarta
+ remove deprecated SqlXmlParser.java
+ a few Java 21 improvements