@@ -69,7 +69,7 @@ public class BrsProcessStepActionFunctionService {
     final String functionName = CleanString.snakeToCamel(originalFuncName.substring(dot + 1));
     final String functionType = (func.getRunInBackend()) ? "MANUAL" : "AUTOTRIGGER";
 
-    throw new RuntimeException(String.format("PPS: Unable to perform %s action for java function: %s *** %s", functionType, functionName, message));
+    throw new RuntimeException("PPS: Unable to perform %s action for java function: %s *** %s".formatted(functionType, functionName, message));
   }
 
   // inverters should maybe be an enum if they start to get used anywhere else in the codebase
@@ -253,7 +253,7 @@ public class BrsProcessStepActionFunctionService {
 
       for (Object stipulation : stipulations) {
         var stip = (JSONObject) stipulation;
-        formattedStipulations.append(String.format("%s\n", stip.getString("name")));
+        formattedStipulations.append("%s\n".formatted(stip.getString("name")));
       }
 
       // Remove the last comma and space
